# FO-parserspirit2

./: AlignmentsParser.cpp  BuildingsParser.cpp  CMakeLists.txt  ConditionParser.cpp  ConditionParser.h  ConditionParser1.cpp  ConditionParser2.cpp  ConditionParser3.cpp  ConditionParserImpl.h  DoubleValueRefParser.cpp  EffectParser.cpp  EffectParser.h  EnumParser.cpp  EnumParser.h  FO.patch  FleetPlansParser.cpp  IntValueRefParser.cpp  ItemsParser.cpp  Label.cpp  Lexer.cpp  Lexer.h  MonsterFleetPlansParser.cpp  Parse.cpp  Parse.h  ParseErrorReporting.cpp  ParseErrorReporting.h  ParseImpl.h  PlanetEnvironmentValueRefParser.cpp  PlanetSizeValueRefParser.cpp  PlanetTypeValueRefParser.cpp  ReportParseError.cpp  ReportParseError.h  ShipDesignsParser.cpp  ShipHullsParser.cpp  ShipPartsParser.cpp  SpecialsParser.cpp  SpeciesParser.cpp  StarTypeValueRefParser.cpp  StringValueRefParser.cpp  TechsParser.cpp  (+10 more)
test/: CMakeLists.txt  buildings  condition_parser_1  condition_parser_1_errors  condition_parser_2  condition_parser_2_errors  condition_parser_3  condition_parser_3_errors  double_arithmetic  double_arithmetic_evaluated  double_statistic  effect_parser  effect_parser_errors  empire_affiliation_type_enumerators  int_arithmetic  int_arithmetic_evaluated  int_statistic  lexer_test_rules.cpp  lexer_tokens  meter_type_enumerators  monster_fleet_plans  planet_environment_constant  planet_environment_statistic  planet_size_constant  planet_size_enumerators  planet_size_statistic  planet_type_constant  planet_type_statistic  ship_part_meter_type_enumerators  ship_parts  species  techs  (+10 more)
